# RAG

./: .gitignore  download.py  pyproject.toml  requirements.txt
data/: README-2.md  readme.md
data/vector_store/: chroma.sqlite3
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Raginterface.jsx  messagebubble.jsx  questionform.jsx  uploadform.jsx
notebook/: document.ipynb  document.py  main.py
notebook/vector_store/: chroma.sqlite3
