[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.21",
    "faiss-cpu>=1.12.0",
    "hf-xet>=1.1.10",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "pydantic>=2.11.9",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "sentence-transformers>=5.1.0",
]
